[package]
name = "libtif"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "library for parsing/saving tif files"
repository = "https://github.com/pietro222222/libtif"
documentation = "https://docs.rs/libtif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
